--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,33 @@
   height: 40vmin;
   pointer-events: none;
 }
+body{
+  font-family: 
+  'nanumsquare';
+}
+
+.black-nav{
+  background: green;
+  width : 100%;
+  display : flex;
+  color : white;
+  padding : 20px;
+  font-size : 20px;
+  font-weight: 600;
+}
+.model{
+  margin-top: 20px;
+  padding: 20px;
+  background: #eee;
+}
+.list {
+
+  margin-top :30px;
+  text-align: left;
+  padding-left: 20px;
+  padding-right: 20px;
+
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -36,3 +63,4 @@
     transform: rotate(360deg);
   }
 }
+
