Part#11 입력받은값으로 게시글 만들기
"..." deepCopy 사용

array 추가하기(unShift)

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,28 @@ body{
   padding-right: 20px;
 
 }
+.pulish{
+
+  margin-top:30px;
+  margin-bottom: 30px;
+
+}
+
+.pulish input{
+
+  padding:10px;
+  font-size: 16px;
+  border-radius: 5px;
+  width: 80%;
+  border: 1px solid grey;
+
+}
+
+.pulish button{
+  display: block;
+  margin: auto;
+  margin-top: 10px;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
